--- a/kerasARCH.ipynb
+++ b/kerasARCH.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "kerasARCH.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTbwAy5P8iQCYfJ72GBLgb",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMdablDlF+x3Ubat7iJt3uG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,11 @@
       "metadata": {
         "id": "1xnh4ZtbSwTl",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3b79ca76-fb40-4307-ed5f-0b4a9e1d3733"
       },
       "source": [
         "from keras import initializers, layers\n",
@@ -60,8 +65,16 @@
         "from keras.regularizers import l2\n",
         "from keras.layers.pooling import GlobalMaxPooling2D"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -71,7 +84,72 @@
         "colab": {}
       },
       "source": [
-        ""
+        "class LetNet:\n",
+        "  @staticmethod\n",
+        "  def build(height, width, channel, classes, activation='relu', weightsPath=None):\n",
+        "    model = Sequential()\n",
+        "    inputShape = (height, width, channel)\n",
+        "\n",
+        "    if K.image_data_format() == 'channel_first':\n",
+        "      inputShape = (channel, height, width)\n",
+        "    \n",
+        "    model.add(Conv2D(20, 5, padding='same', input_shape=inputShape))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D(pool_size=(2, 2) ,strides=(2, 2)))\n",
+        "\n",
+        "    model.add(Conv2D(50, 5, padding='same'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
+        "\n",
+        "    model.add(Flatten())\n",
+        "\n",
+        "    model.add(Dense(500))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Dense(classes))\n",
+        "    model.add(Activation('softmax'))\n",
+        "\n",
+        "    if weightsPath is not None:\n",
+        "      model.load_weights = weightsPath\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0BGjBFtMB-Os",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def kerasModelEx(model, data, epochs, batchSize, lr, loss, metric):\n",
+        "  weights = './'+model+\"_weights.hdf5\"\n",
+        "  trainData, trainLabels, testData, testLabels = data\n",
+        "\n",
+        "  load_model = -1\n",
+        "  opt = SGD(lr=lr)\n",
+        "\n",
+        "  shape = testData.shape[1:]\n",
+        "  height_, width_, channel_ = shape[0], shape[1], shape[2]\n",
+        "  classes_ = testLabels.shape[1]\n",
+        "\n",
+        "  builder = getattr(globals()[model],'build')\n",
+        "  model = builder(height=height_, width=width_, channel=channel_,\n",
+        "                  classes=classes_, \n",
+        "                  weightsPath=weights if load_model > 0 else None)\n",
+        "  model.compile(loss=loss, optimizer=opt, metrics=[metric])\n",
+        "\n",
+        "  if load_model < 0:\n",
+        "    model.fit(trainData, trainLabels, batch_size=batchSize,\n",
+        "              epochs=epochs, verbose=1)\n",
+        "    (loss, accuracy) = model.evaluate(testData, testLabels,\n",
+        "                                      batch_size=batchSize, verbose=1)\n",
+        "    print(\"Accuracy as {}\".format(accuracy*100))\n",
+        "    print(\"Loss as {}\".format(loss*100))\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
