--- a/Executor.ipynb
+++ b/Executor.ipynb
@@ -5,13 +5,15 @@
     "colab": {
       "name": "Executor.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEnsRc1gEop7mBNyZqFWOE",
+      "mount_file_id": "16xtHNYdLGINXNCw6GMgVqmrNwh7bEmK4",
+      "authorship_tag": "ABX9TyOu/FdStntTBz/b8d6Kkkat",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,11 +31,7 @@
       "metadata": {
         "id": "ZVSob9eD2lXY",
         "colab_type": "code",
-        "outputId": "f266b66b-e8fe-4809-f5fb-70064f522553",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        }
+        "colab": {}
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -48,27 +46,22 @@
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting mnist\n",
-            "  Downloading https://files.pythonhosted.org/packages/c6/c4/5db3bfe009f8d71f1d532bbadbd0ec203764bba3a469e4703a889db8e5e0/mnist-0.2.2-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from mnist) (1.18.2)\n",
-            "Installing collected packages: mnist\n",
-            "Successfully installed mnist-0.2.2\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dkSBRTmbK2ux",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -138,7 +131,124 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from keras import initializers, layers\n",
+        "from keras.models import Sequential, Model\n",
+        "from keras.layers import (\n",
+        "    Dropout,\n",
+        "    Input,\n",
+        "    AveragePooling2D,\n",
+        "    GlobalAveragePooling2D,\n",
+        "    MaxPool2D\n",
+        ")\n",
+        "from keras.layers.convolutional import (\n",
+        "    Conv2D,\n",
+        "    MaxPooling2D,\n",
+        "    ZeroPadding2D\n",
+        ")\n",
+        "from keras.layers.core import (\n",
+        "    Activation,\n",
+        "    Flatten,\n",
+        "    Dense\n",
+        ")\n",
+        "from keras.layers.merge import (\n",
+        "    concatenate,\n",
+        "    add\n",
+        ")\n",
+        "from keras import backend as K\n",
+        "from keras.layers.normalization import BatchNormalization\n",
+        "from keras.regularizers import l2\n",
+        "from keras.layers.pooling import GlobalMaxPooling2D"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8M7a3Od8IH-G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class LetNet:\n",
+        "  @staticmethod\n",
+        "  def build(height, width, channel, classes, activation='relu', weightsPath=None):\n",
+        "    model = Sequential()\n",
+        "    inputShape = (height, width, channel)\n",
+        "\n",
+        "    if K.image_data_format() == 'channel_first':\n",
+        "      inputShape = (channel, height, width)\n",
+        "    \n",
+        "    model.add(Conv2D(20, 5, padding='same', input_shape=inputShape))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D(pool_size=(2, 2) ,strides=(2, 2)))\n",
+        "\n",
+        "    model.add(Conv2D(50, 5, padding='same'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
+        "\n",
+        "    model.add(Flatten())\n",
+        "\n",
+        "    model.add(Dense(500))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Dense(classes))\n",
+        "    model.add(Activation('softmax'))\n",
+        "\n",
+        "    if weightsPath is not None:\n",
+        "      model.load_weights = weightsPath\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "26VwA0QvIKF6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def kerasModelEx(model, data, epochs, batchSize, lr, loss, metric):\n",
+        "  weights = './'+model+\"_weights.hdf5\"\n",
+        "  trainData, trainLabels, testData, testLabels = data\n",
+        "\n",
+        "  load_model = -1\n",
+        "  opt = SGD(lr=lr)\n",
+        "\n",
+        "  shape = testData.shape[1:]\n",
+        "  height_, width_, channel_ = shape[0], shape[1], shape[2]\n",
+        "  classes_ = testLabels.shape[1]\n",
+        "\n",
+        "  builder = getattr(globals()[model],'build')\n",
+        "  model = builder(height=height_, width=width_, channel=channel_,\n",
+        "                  classes=classes_, \n",
+        "                  weightsPath=weights if load_model > 0 else None)\n",
+        "  model.compile(loss=loss, optimizer=opt, metrics=[metric])\n",
+        "\n",
+        "  if load_model < 0:\n",
+        "    model.fit(trainData, trainLabels, batch_size=batchSize,\n",
+        "              epochs=epochs, verbose=1)\n",
+        "    (loss, accuracy) = model.evaluate(testData, testLabels,\n",
+        "                                      batch_size=batchSize, verbose=1)\n",
+        "    print(\"Accuracy as {}\".format(accuracy*100))\n",
+        "    print(\"Loss as {}\".format(loss*100))\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EFZh93gAINTy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = kerasModelEx(\"LetNet\", (train_Data, train_Labels, test_Data, test_Labels), 20, 128, 0.01, \"categorical_crossentropy\", \"accuracy\")"
       ],
       "execution_count": 0,
       "outputs": []
