--- a/kerasARCH.ipynb
+++ b/kerasARCH.ipynb
@@ -6,7 +6,7 @@
       "name": "kerasARCH.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdablDlF+x3Ubat7iJt3uG",
+      "authorship_tag": "ABX9TyNqwOQkW4ChqQ+Z/TyoPcD+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,11 @@
       "metadata": {
         "id": "1xnh4ZtbSwTl",
         "colab_type": "code",
+        "outputId": "3b79ca76-fb40-4307-ed5f-0b4a9e1d3733",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3b79ca76-fb40-4307-ed5f-0b4a9e1d3733"
+        }
       },
       "source": [
         "from keras import initializers, layers\n",
@@ -65,7 +65,7 @@
         "from keras.regularizers import l2\n",
         "from keras.layers.pooling import GlobalMaxPooling2D"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,6 +111,74 @@
         "\n",
         "    if weightsPath is not None:\n",
         "      model.load_weights = weightsPath\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XArW2EpfSw-t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class AlexNet:\n",
+        "  @staticmethod\n",
+        "  def build(height, width, channel, classes, activation='relu', weightsPath=None):\n",
+        "    model = Sequential()\n",
+        "    inputShape = (height, width, channel)\n",
+        "\n",
+        "    if K.image_data_format() == \"channel_first\":\n",
+        "      inputShape = (channel, height, width)\n",
+        "    \n",
+        "    model.add(Conv2d(96, 11, input_shape=inputShape, strides=(4, 4), padding='valid'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D((2, 2), strides=(2, 2), padding='valid'))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Conv2d(256, 11, strides=(1, 1), padding='valid'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D((2, 2), strides=(2, 2), padding='valid'))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Conv2D(384, 3, strides=(1, 1), padding='valid'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Conv2D(384, 3, strides=(1, 1), padding='valid'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Conv2d(256, 11, strides=(1, 1), padding='valid'))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPooling2D((2, 2), strides=(2, 2), padding='valid'))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Flatten())\n",
+        "\n",
+        "    model.add(Dense(4096, input_shape=(244*244*3,)))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(Dropout(0.4))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Dense(4096))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(Dropout(0.4))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Dense(1000))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(Dropout(0.4))\n",
+        "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Dense(classes))\n",
+        "    model.add(Activation('softmax'))\n",
+        "\n",
+        "    if weightsPath is not None:\n",
+        "      model.load_weights(weightsPath)\n",
         "\n",
         "    return model"
       ],
