--- a/dog_breed.ipynb
+++ b/dog_breed.ipynb
@@ -6,7 +6,8 @@
       "name": "dog_breed.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyhHP6AVgUP0gwCh4JdhRI",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyND0DHTj7Fr9JaEEDOnl4Bw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +31,11 @@
       "metadata": {
         "id": "QKpx0XPbZOip",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "de03d31c-ebb0-4160-f6bb-f3090fcb70e0"
       },
       "source": [
         "from keras import initializers, layers\n",
@@ -63,8 +68,16 @@
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "from keras.optimizers import Adam"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -185,7 +198,7 @@
         "      if img not in test_minilist:\n",
         "        shutil.move(os.path.join(trainDir, cat, img), os.path.join(valDir, cat, img))\n",
         "    \n",
-        "    return \"Image Rearranged\""
+        "  return \"Image Rearranged\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -193,12 +206,107 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U64_PyiCgi8z",
+        "id": "l_cHRODmCXd7",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CMSLsQ3QZD-g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_datagen = ImageDataGenerator(\n",
+        "    rescale=1./255,\n",
+        "    shear_range=0.2,\n",
+        "    zoom_range=0.2,\n",
+        "    horizontal_flip=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z6Kny8weoUZ9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_datagen = ImageDataGenerator(rescale=1./255)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UAcGSZPooVHI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7357e7af-33fe-4ce5-e9c1-ef9ed918ab47"
+      },
+      "source": [
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "    '/content/drive/My Drive/DLData/Train',\n",
+        "    target_size=(150, 150),\n",
+        "    batch_size=32,\n",
+        "    class_mode='binary')"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 9084 images belonging to 120 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wFGC93XNowH9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "validation_generator = test_datagen.flow_from_directory(\n",
+        "    '/content/drive/My Drive/DLData/validation',\n",
+        "    target_size=(150, 150),\n",
+        "    batch_size=32,\n",
+        "    class_mode='binary')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0LAH4fvEo06X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.fit_generator(\n",
+        "    train_generator,\n",
+        "    steps_per_epoch=2000,\n",
+        "    epochs=50,\n",
+        "    validation_data=validation_generator,\n",
+        "    validation_steps=800)"
       ],
       "execution_count": 0,
       "outputs": []
