--- a/kerasARCH.ipynb
+++ b/kerasARCH.ipynb
@@ -6,7 +6,7 @@
       "name": "kerasARCH.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNqwOQkW4ChqQ+Z/TyoPcD+",
+      "authorship_tag": "ABX9TyPxrHP3/65hx0TQu0cqQifp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,12 +134,12 @@
         "    if K.image_data_format() == \"channel_first\":\n",
         "      inputShape = (channel, height, width)\n",
         "    \n",
-        "    model.add(Conv2d(96, 11, input_shape=inputShape, strides=(4, 4), padding='valid'))\n",
+        "    model.add(Conv2D(96, 11, input_shape=inputShape, strides=(4, 4), padding='valid'))\n",
         "    model.add(Activation(activation))\n",
         "    model.add(MaxPooling2D((2, 2), strides=(2, 2), padding='valid'))\n",
         "    model.add(BatchNormalization())\n",
         "\n",
-        "    model.add(Conv2d(256, 11, strides=(1, 1), padding='valid'))\n",
+        "    model.add(Conv2D(256, 11, strides=(1, 1), padding='valid'))\n",
         "    model.add(Activation(activation))\n",
         "    model.add(MaxPooling2D((2, 2), strides=(2, 2), padding='valid'))\n",
         "    model.add(BatchNormalization())\n",
@@ -152,7 +152,7 @@
         "    model.add(Activation(activation))\n",
         "    model.add(BatchNormalization())\n",
         "\n",
-        "    model.add(Conv2d(256, 11, strides=(1, 1), padding='valid'))\n",
+        "    model.add(Conv2D(256, 11, strides=(1, 1), padding='valid'))\n",
         "    model.add(Activation(activation))\n",
         "    model.add(MaxPooling2D((2, 2), strides=(2, 2), padding='valid'))\n",
         "    model.add(BatchNormalization())\n",
@@ -173,6 +173,175 @@
         "    model.add(Activation(activation))\n",
         "    model.add(Dropout(0.4))\n",
         "    model.add(BatchNormalization())\n",
+        "\n",
+        "    model.add(Dense(classes))\n",
+        "    model.add(Activation('softmax'))\n",
+        "\n",
+        "    if weightsPath is not None:\n",
+        "      model.load_weights(weightsPath)\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7Ya94CoOr-01",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class VGG16:\n",
+        "  @staticmethod\n",
+        "  def build(height, width, channel, classes, activation='relu', weightsPath=None):\n",
+        "    model = Sequential()\n",
+        "    inputShape = (height, width, channel)\n",
+        "\n",
+        "    if K.image_data_format() == \"channel_first\":\n",
+        "      inputShape = (channel, height, width)\n",
+        "\n",
+        "    model.add(Conv2D(64, 3, input_shape=inputShape, padding='same'))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(64, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(128, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(128, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Flatten())\n",
+        "\n",
+        "    model.add(Dense(4096))\n",
+        "    model.add(Activation(aactivation))\n",
+        "\n",
+        "    model.add(Dense(4096))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Dense(classes))\n",
+        "    model.add(Activation('softmax'))\n",
+        "\n",
+        "    if weightsPath is not None:\n",
+        "      model.load_weights(weightsPath)\n",
+        "\n",
+        "    return model"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mhtfapLMv4lr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class VGG19:\n",
+        "  @staticmethod\n",
+        "  def build(height, width, channel, classes, activation='relu', weightsPath=None):\n",
+        "    model = Sequential()\n",
+        "    inputShape = (height, width, channel)\n",
+        "\n",
+        "    if K.image_data_format() == \"channel_first\":\n",
+        "      inputShape = (channel, height, width)\n",
+        "\n",
+        "    model.add(Conv2D(64, 3, input_shape=inputShape, padding='same'))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(64, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(128, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(128, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(256, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "\n",
+        "    model.add(Conv2D(512, 3, padding=\"same\"))\n",
+        "    model.add(Activation(activation))\n",
+        "    model.add(MaxPool2D(pool_size=(2,2),strides=(2,2)))\n",
+        "\n",
+        "    model.add(Flatten())\n",
+        "\n",
+        "    model.add(Dense(4096))\n",
+        "    model.add(Activation(aactivation))\n",
+        "\n",
+        "    model.add(Dense(4096))\n",
+        "    model.add(Activation(activation))\n",
         "\n",
         "    model.add(Dense(classes))\n",
         "    model.add(Activation('softmax'))\n",
